[webgui] use actual canvas size as pdf page size
When producing pdf document, set page size to maximal canvas size.
Also include margins into page size to let normally embed complete
canvas per page.

--- a/js/files/canv_batch.htm
+++ b/js/files/canv_batch.htm
@@ -6,7 +6,7 @@
    <title>Batch production</title>
    <style>
      @media print {
-        @page { margin: 10mm; size: 210mm 297mm; }
+        @page { margin: $page_margin; size: $page_width $page_height; }
      }
   </style>
   <script src="$jsrootsys/build/jsroot.js"></script>
